--- a/app/templates/followers.html
+++ b/app/templates/followers.html
@@ -24,6 +24,7 @@
     {% endfor %}
 </table>
 <div class="pagination">
-    {{ macros.pagination_widget(pagination, endpoint, username = user.username) }}
-</div>
-{% endblock %}
+    {{ macros.pagination_widget(pagination, endpoint, username = username) }}
+</div>    
+{% endblock %}    
+                    
