--- a/app/templates/_macros.html
+++ b/app/templates/_macros.html
@@ -1,7 +1,8 @@
-{% macro pagination_widget(pagination, endpoint, fragment='') %}
+{% macro pagination_widget(pagination, endpoint) %}
 <ul class="pagination">
-    <li{% if not pagination.has_prev %} class="disabled"{% endif %}>
-        <a href="{% if pagination.has_prev %}{{ url_for(endpoint, page=pagination.prev_num, **kwargs) }}{{ fragment }}{% else %}#{% endif %}">
+    <li{% if not pagination.has_prev %} class="disable" {% endif %}>
+        <a href="{% if pagination.has_prev %}{{ url_for(endpoint,
+            page = pagination.page - 1, **kwargs) }}{% else %}#{% endif %}">
             &laquo;
         </a>
     </li>
@@ -9,21 +10,24 @@
         {% if p %}
             {% if p == pagination.page %}
             <li class="active">
-                <a href="{{ url_for(endpoint, page = p, **kwargs) }}{{ fragment }}">{{ p }}</a>
-            </li>
+                <a href="{{ url_for(endpoint, page = p, **kwargs) }}">{{ p }}</a>
+            <li>
             {% else %}
             <li>
-                <a href="{{ url_for(endpoint, page = p, **kwargs) }}{{ fragment }}">{{ p }}</a>
+                <a href="{{ url_for(endpoint, page = p, **kwargs) }}">{{ p }}</a>
             </li>
             {% endif %}
         {% else %}
-        <li class="disabled"><a href="#">&hellip;</a></li>
+        <li class="disable"><a href="#">&hellip;</a></li>
         {% endif %}
     {% endfor %}
-    <li{% if not pagination.has_next %} class="disabled"{% endif %}>
-        <a href="{% if pagination.has_next %}{{ url_for(endpoint, page=pagination.next_num, **kwargs) }}{{ fragment }}{% else %}#{% endif %}">
+    <li{% if not pagination.has_next %} class="disable"{% endif %}>
+        <a href="{% if pagination.has_next %}{{ url_for(endpoint,
+            page = pagination.page + 1, **kwargs) }}{% else %}#{% endif %}">
             &raquo;
         </a>
     </li>
 </ul>
 {% endmacro %}
+            
+    
