--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
 {% import "_macros.html" as macros %}
-
 {% block title %}Flasky - {{ user.username }}{% endblock %}
 
 {% block page_content %}
@@ -21,7 +20,7 @@
         {% endif %}
         {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
         <p>Member since {{ moment(user.member_since).format('L') }}. Last seen {{ moment(user.last_seen).fromNow() }}.</p>
-        <p>{{ user.posts.count() }} blog posts. {{ user.comments.count() }} comments.</p>
+        <p>{{ user.posts.count() }} blog posts.</p>
         <p>
             {% if current_user.can(Permission.FOLLOW) and user != current_user %}
                 {% if not current_user.is_following(user) %}
@@ -50,7 +49,7 @@
 {% include '_posts.html' %}
 {% if pagination %}
 <div class="pagination">
-    {{ macros.pagination_widget(pagination, '.user', username=user.username) }}
+    {{ macros.pagination_widget(pagination, '.index') }}
 </div>
-{% endif %}
+{% endif %}    
 {% endblock %}
